--- a/packages/atomic-legacy/tsconfig.json
+++ b/packages/atomic-legacy/tsconfig.json
@@ -2,12 +2,13 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
-    "declaration": false,
+    "declaration": true,
     "experimentalDecorators": true,
     "lib": ["dom", "dom.iterable", "ES2023", "ESNext.Promise"],
     "moduleResolution": "Bundler",
     "module": "ES2022",
     "target": "ES2021",
+    "outDir": "dist",
     "resolveJsonModule": true,
     "useDefineForClassFields": false,
     "noUnusedLocals": true,
