--- a/packages/headless/package.json
+++ b/packages/headless/package.json
@@ -73,7 +73,8 @@
     "dist/"
   ],
   "scripts": {
-    "dev": "concurrently \"pnpm run build:definitions -w\" \"pnpm run build:bundles dev\"",
+    "dev:definitions": "pnpm run build:definitions -w",
+    "dev:bundles": "pnpm run build:bundles dev",
     "build": "pnpm run build:definitions && pnpm run build:bundles && pnpm run build:esm",
     "build:bundles": "node esbuild.mjs",
     "build:esm": "node ./scripts/build.mjs --config=tsconfig.build-esm.json",
