Fix knip issue.

--- a/knip.jsonc
+++ b/knip.jsonc
@@ -18,7 +18,7 @@
         "scripts/**/*.{js,mjs}"
       ],
       "ignoreBinaries": ["ts-node", "dev"],
-      "ignoreDependencies": ["@playwright/mcp"]
+      "ignoreDependencies": ["@playwright/mcp", "handlebars"]
     },
     "packages/headless": {
       "entry": ["src/*index.ts", "ponyfills/*.js"],
