updated coveo ua to 2.30.52

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -42,7 +42,7 @@ catalog:
   '@types/react': 19.2.7
   '@types/react-dom': 19.2.3
   '@vitejs/plugin-react': 5.1.1
-  coveo.analytics: 2.30.49
+  coveo.analytics: 2.30.52
   cypress: 13.7.3
   cypress-repeat: 2.3.9
   dayjs: 1.11.13
@@ -73,8 +73,9 @@ publicHoistPattern:
 minimumReleaseAge: 10080
 minimumReleaseAgeExclude:
   - '@coveo/*'
+  - 'coveo.analytics'
   - '@vitest/*'
-  - vitest 
+  - vitest
   - '@wc-toolkit/storybook-helpers'
   - '@storybook/*'
   - storybook
