Replace CODEOWNERS with coveooss/areas

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,85 +1,1 @@
-# Default owners for everything in the repo. Later matches take precedence.
-
-* @coveo/dxui
-
-# Doc owners
-## Doc files
-
-packages/**/*.mdx @coveo/dx
-packages/**/*.md @coveo/dx
-packages/**/*.new.stories.tsx @coveo/dx
-packages/**/typedoc.json @coveo/dx
-packages/**/*.typedoc.json @coveo/dx
-
-## Doc package
-
-packages/documentation/ @coveo/dx
-
-# Knowledge Owners
-## Quantic package
-
-/packages/quantic/ @coveo/knowledge-ui-kit-reviewers
-/packages/quantic/package.json @coveo/salesforce-integration @coveo/dxui
-
-## Generative Answering
-### Headless
-/packages/headless/src/api/knowledge/** @coveo/knowledge-ui-kit-reviewers
-/packages/headless/src/api/generated-answer/** @coveo/knowledge-ui-kit-reviewers
-/packages/headless/src/api/service/** @coveo/knowledge-ui-kit-reviewers
-/packages/headless/src/features/generated-answer/** @coveo/knowledge-ui-kit-reviewers
-/packages/headless/src/controllers/knowledge/generated-answer/** @coveo/knowledge-ui-kit-reviewers
-/packages/headless/src/features/question-answering/** @coveo/knowledge-ui-kit-reviewers
-
-### Atomic
-/packages/atomic/src/components/common/generated-answer/** @coveo/knowledge-ui-kit-reviewers
-/packages/atomic/src/components/search/atomic-generated-answer/** @coveo/knowledge-ui-kit-reviewers
-
-## Insight
-### Headless
-/packages/headless/src/app/insight-engine/** @coveo/knowledge-ui-kit-reviewers
-/packages/headless/src/controllers/insight/** @coveo/knowledge-ui-kit-reviewers
-/packages/headless/src/controllers/insight-interface/** @coveo/knowledge-ui-kit-reviewers
-/packages/headless/src/features/insight-interface/** @coveo/knowledge-ui-kit-reviewers
-/packages/headless/src/features/insight-search/** @coveo/knowledge-ui-kit-reviewers
-/packages/headless/src/features/insight-user-actions/** @coveo/knowledge-ui-kit-reviewers
-/packages/headless/src/features/insight-configuration/** @coveo/knowledge-ui-kit-reviewers
-
-### Atomic
-/packages/atomic/src/components/insight/** @coveo/knowledge-ui-kit-reviewers
-
-## Case Assist
-### Headless
-/packages/headless/src/app/case-assist-engine/** @coveo/knowledge-ui-kit-reviewers
-/packages/headless/src/controllers/case-field/** @coveo/knowledge-ui-kit-reviewers
-/packages/headless/src/controllers/case-field/** @coveo/knowledge-ui-kit-reviewers
-/packages/headless/src/features/case-assist/** @coveo/knowledge-ui-kit-reviewers
-/packages/headless/src/features/case-assist-configuration/** @coveo/knowledge-ui-kit-reviewers
-/packages/headless/src/features/case-context/** @coveo/knowledge-ui-kit-reviewers
-/packages/headless/src/features/case-field/** @coveo/knowledge-ui-kit-reviewers
-/packages/headless/src/features/case-input/** @coveo/knowledge-ui-kit-reviewers
-
-# Owners of Atomic's Cypress Tests
-
-/packages/atomic/cypress/ @coveo/dxui @coveo/search-qa
-
-# Owners of Atomic IPX components
-
-/packages/atomic/src/components/ipx @coveo/knowledge-ui-kit-reviewers
-
-# Owners of the Commerce headless sub-package
-
-/packages/headless/commerce/ @coveo/commerce-routemasters
-/packages/headless/src/**/commerce/ @coveo/commerce-routemasters
-/packages/headless/src/app/commerce-engine/ @coveo/commerce-routemasters
-/packages/headless/src/state/commerce-app-state.ts @coveo/commerce-routemasters
-/packages/headless/src/commerce.index.ts @coveo/commerce-routemasters
-/packages/headless/src/test/**commerce** @coveo/commerce-routemasters
-
-# Owners of the SSR sub-packages
-/packages/headless/src/ssr/** @coveo/dxui
-/packages/headless/src/ssr-next/** @coveo/dxui
-
-# Owners of the Shopify headless package
-
-/packages/shopify/ @coveo/shopify
-/packages/shopify/package.json @coveo/shopify @coveo/dxui
+# See .areas/README.md
