--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -623,10 +623,10 @@ jobs:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
       - uses: ./.github/actions/setup
       - uses: ./.github/actions/cypress-atomic-insight-panel
-  cypress-headless-ssr-search-nextjs-app-router-test:
-    name: "Run e2e tests on Headless SSR Search NextJS App Router"
+  cypress-headless-ssr-search-nextjs-test:
+    name: "Run e2e tests on Headless SSR Search NextJS"
     needs: affected
-    if: contains(needs.affected.outputs.projects, '@samples/headless-ssr-search-nextjs-app-router')
+    if: contains(needs.affected.outputs.projects, '@samples/headless-ssr-search-nextjs')
     runs-on: ubuntu-latest
     steps:
       - name: Harden Runner
@@ -636,7 +636,7 @@ jobs:
 
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
       - uses: ./.github/actions/setup
-      - uses: ./.github/actions/cypress-headless-ssr-search-nextjs-app-router
+      - uses: ./.github/actions/cypress-headless-ssr-search-nextjs
   e2e-quantic:
     name: "Run Quantic E2E tests"
     needs: affected
@@ -739,7 +739,7 @@ jobs:
       - "playwright-atomic-search-commerce-react-test"
       - "playwright-atomic-search-commerce-angular-test"
       - "cypress-atomic-insight-panel-test"
-      - "cypress-headless-ssr-search-nextjs-app-router-test"
+      - "cypress-headless-ssr-search-nextjs-test"
       # - "prerelease-npm-pr"
       - "prerelease-cdn-pr"
     runs-on: ubuntu-latest
@@ -777,7 +777,7 @@ jobs:
       - "playwright-atomic-search-commerce-react-test"
       - "playwright-atomic-search-commerce-angular-test"
       - "cypress-atomic-insight-panel-test"
-      - "cypress-headless-ssr-search-nextjs-app-router-test"
+      - "cypress-headless-ssr-search-nextjs-test"
     runs-on: ubuntu-latest
     steps:
       - name: Harden Runner
