--- a/packages/atomic-angular/package.json
+++ b/packages/atomic-angular/package.json
@@ -20,9 +20,9 @@
     "@coveo/headless": "workspace:*"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "20.3.13",
-    "@angular/cli": "20.3.13",
-    "@angular/compiler-cli": "20.3.16",
+    "@angular-devkit/build-angular": "catalog:",
+    "@angular/cli": "catalog:",
+    "@angular/compiler-cli": "catalog:",
     "@types/node": "catalog:",
     "@coveo/headless": "workspace:*",
     "ng-packagr": "20.3.2",
