--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -65,7 +65,19 @@ catalog:
   vitest: 4.0.10
   '@vitest/coverage-v8': 4.0.10
   '@vitest/browser-playwright': 4.0.10
-
+  '@angular/build': 20.3.13
+  '@angular/cli': 20.3.13
+  '@angular/compiler-cli': 20.3.16
+  '@angular-devkit/build-angular': 20.3.13
+  '@angular/animations': 20.3.16
+  '@angular/common': 20.3.16
+  '@angular/compiler': 20.3.16
+  '@angular/core': 20.3.16
+  '@angular/forms': 20.3.16
+  '@angular/platform-browser': 20.3.16
+  '@angular/platform-server': 20.3.16
+  '@angular/platform-browser-dynamic': 20.3.16
+  '@angular/router': 20.3.16
 
 publicHoistPattern:
   - '*eslint*'
