--- a/samples/atomic/search-commerce-angular/package.json
+++ b/samples/atomic/search-commerce-angular/package.json
@@ -11,13 +11,13 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "20.3.16",
-    "@angular/common": "20.3.16",
-    "@angular/compiler": "20.3.16",
-    "@angular/core": "20.3.16",
-    "@angular/platform-browser": "20.3.16",
-    "@angular/platform-browser-dynamic": "20.3.16",
-    "@angular/router": "20.3.16",
+    "@angular/animations": "catalog:",
+    "@angular/common": "catalog:",
+    "@angular/compiler": "catalog:",
+    "@angular/core": "catalog:",
+    "@angular/platform-browser": "catalog:",
+    "@angular/platform-browser-dynamic": "catalog:",
+    "@angular/router": "catalog:",
     "@coveo/atomic-angular": "workspace:*",
     "rxjs": "7.8.2",
     "zone.js": "0.15.1",
