--- a/samples/headless/rga-angular/package.json
+++ b/samples/headless/rga-angular/package.json
@@ -11,21 +11,21 @@
   "type": "module",
   "private": true,
   "dependencies": {
-    "@angular/common": "20.3.16",
-    "@angular/compiler": "20.3.16",
-    "@angular/core": "20.3.16",
-    "@angular/forms": "20.3.16",
-    "@angular/platform-browser": "20.3.16",
-    "@angular/platform-server": "20.3.16",
+    "@angular/common": "catalog:",
+    "@angular/compiler": "catalog:",
+    "@angular/core": "catalog:",
+    "@angular/forms": "catalog:",
+    "@angular/platform-browser": "catalog:",
+    "@angular/platform-server": "catalog:",
     "@coveo/headless": "workspace:*",
     "rxjs": "7.8.2",
     "tslib": "2.8.1",
     "zone.js": "0.15.1"
   },
   "devDependencies": {
-    "@angular/build": "20.3.13",
-    "@angular/cli": "20.3.13",
-    "@angular/compiler-cli": "20.3.16",
+    "@angular/build": "catalog:",
+    "@angular/cli": "catalog:",
+    "@angular/compiler-cli": "catalog:",
     "typescript": "catalog:"
   },
   "peerDependencies": {
