--- a/.areas/e2e-tests.yml
+++ b/.areas/e2e-tests.yml
@@ -1,6 +1,7 @@
 description: End-to-end test infrastructure (Cypress)
 file_patterns:
   - packages/atomic/cypress/**
+  - packages/atomic/src/components/**/e2e/**
 
 reviewers:
   search-qa: ~
