--- a/.areas/node-dependencies.yml
+++ b/.areas/node-dependencies.yml
@@ -7,6 +7,7 @@ file_patterns:
   # Manifests everywhere
   - "**/pnpm-workspace.yaml"
   - "**/pnpm-lock.yaml"
+  - "**/package.json"
 
 reviewers:
   dxui:
