--- a/.areas/root.yml
+++ b/.areas/root.yml
@@ -4,6 +4,7 @@ file_patterns:
   - biome.jsonc
   - CODEOWNERS
   - knip.jsonc
+  - lint-staged.config.js
   - package.json
   - renovate.json5
   - tsconfig.json
@@ -13,7 +14,13 @@ file_patterns:
   - .editorconfig
   - .vscode/**
 
+  # CI/CD infrastructure
+  - patches/**
+  - scripts/**
+  - utils/**
+
   # New packages
+  - .areas/*
   - packages/*
 
   - .husky/**
