--- a/.areas/node-dependencies.yml
+++ b/.areas/node-dependencies.yml
@@ -12,3 +12,6 @@ file_patterns:
 reviewers:
   dxui:
     minimum_approvals: 1
+
+review_bypass:
+  integration/139346: exempt # Developer eXperience Bot. Important for releases
