--- a/.areas/shopify.yml
+++ b/.areas/shopify.yml
@@ -5,3 +5,6 @@ file_patterns:
 reviewers:
   shopify: ~
   dxui: ~
+
+review_bypass:
+  integration/139346: exempt # Developer eXperience Bot. Important for releases
