--- a/.areas/internal-docs.yml
+++ b/.areas/internal-docs.yml
@@ -4,3 +4,6 @@ file_patterns:
 reviewers:
   dev-writers: ~
   dxui: ~
+
+review_bypass:
+  integration/139346: exempt # Developer eXperience Bot. Important for releases
