--- a/.areas/ipx.yml
+++ b/.areas/ipx.yml
@@ -5,3 +5,6 @@ file_patterns:
 reviewers:
   knowledge-ui-kit-reviewers: ~
   dxui: ~
+
+review_bypass:
+  integration/139346: exempt # Developer eXperience Bot. Important for releases
