--- a/knip.jsonc
+++ b/knip.jsonc
@@ -87,6 +87,10 @@
       "ignore": ["**/*"],
       "ignoreDependencies": ["cypress-repeat"]
     },
+    "packages/atomic-legacy": {
+      "ignore": ["**/*"],
+      "ignoreDependencies": ["cypress-repeat"]
+    },
     "packages/create-atomic": {
       "ignore": ["**/*"]
     },
