Add review bypass to the missing areas

--- a/.areas/atomic.yml
+++ b/.areas/atomic.yml
@@ -14,3 +14,6 @@ file_patterns:
   - samples/atomic/**
 reviewers:
   dxui: ~
+
+review_bypass:
+  integration/139346: exempt # Developer eXperience Bot. Important for releases
