--- a/.areas/bueno.yml
+++ b/.areas/bueno.yml
@@ -3,3 +3,6 @@ file_patterns:
   - packages/bueno/**
 reviewers:
   dxui: ~
+
+review_bypass:
+  integration/139346: exempt # Developer eXperience Bot. Important for releases
