--- a/.areas/commerce.yml
+++ b/.areas/commerce.yml
@@ -10,3 +10,6 @@ file_patterns:
 reviewers:
   commerce-routemasters: ~
   dxui: ~
+
+review_bypass:
+  integration/139346: exempt # Developer eXperience Bot. Important for releases
