--- a/.areas/case-assist.yml
+++ b/.areas/case-assist.yml
@@ -11,3 +11,6 @@ file_patterns:
 reviewers:
   knowledge-ui-kit-reviewers: ~
   dxui: ~
+
+review_bypass:
+  integration/139346: exempt # Developer eXperience Bot. Important for releases
