--- a/.areas/documentation.yml
+++ b/.areas/documentation.yml
@@ -9,3 +9,6 @@ file_patterns:
 reviewers:
   dev-writers: ~
   dxui: ~
+
+review_bypass:
+  integration/139346: exempt # Developer eXperience Bot. Important for releases
