--- a/.areas/e2e-tests.yml
+++ b/.areas/e2e-tests.yml
@@ -6,3 +6,6 @@ file_patterns:
 reviewers:
   search-qa: ~
   dxui: ~
+
+review_bypass:
+  integration/139346: exempt # Developer eXperience Bot. Important for releases
