--- a/packages/atomic/package.json
+++ b/packages/atomic/package.json
@@ -41,6 +41,11 @@
     },
     "./custom-elements-manifest": "./custom-elements.json"
   },
+  "sideEffects": [
+    "./dist/atomic/components/components/*/*/*.js",
+    "./dist/index.js",
+    "./dist/atomic/loader/index.js"
+  ],
   "files": [
     "dist/",
     "docs/",
